# arb

./: .dockerignore  .gitignore  main.py  ollama.sh  pyproject.toml  requirements.txt  test.py
config/: development.yml  production.yml
config/service_config/: agent_config.yml  auth_config.yml  db_config.yml  llm_config.yml
data/reports/: alpha_report.json  outstanding.json  topoutstanding.json  turnover.json  winlost_detail.json
src/controller/: arb_auth_controller.py  arb_nosql_controller.py  arb_service_controller.py  arb_vector_db_controller.py
src/model/: abbreviation_info.py  alpha_metadata.py  alpha_status_code.py  db_model.py
src/module/: application_container.py
src/notebook/: abbreviation_agent.ipynb  agent.ipynb  benchmark.ipynb  delete_param_request.ipynb  functional_calling.ipynb  ner.ipynb  ner_feedback.ipynb  structured_output.ipynb
src/repository/DBArrangement/SPs/: SPU_AIML_ARB_APIKeyManagement_Authenticate_APIKey.sql  SPU_AIML_ARB_APIKeyManagement_Delete_APIKey.sql  SPU_AIML_ARB_APIKeyManagement_Get_APIKey.sql  SPU_AIML_ARB_APIKeyManagement_Insert_APIKey.sql  SPU_AIML_ARB_APIKeyManagement_Update_APIKey.sql  SPU_AIML_ARB_Insert_EntityExtraction.sql
src/repository/DBArrangement/Schema/: schema.sql
src/repository/DataAccess/: arb_data_access.py
src/service/implement/arb_master_agent_impl/: agent_composer_impl.py
src/service/implement/arb_service_impl/: arb_auth_service_impl.py  arb_db_service_impl.py  arb_service_impl.py  arb_vector_db_service_impl.py
src/utils/: constants.py  debugger.py  logger.py  timer.py  utils.py
(+28 files in other folders)
